2001-12-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.cc, ArgV.h: (seek) new method.
	* MirrorJob.cc: seek args before TreatJob creation.
	* ftpclass.cc, ftpclass.h, NetAccess.cc, NetAccess.h, Http.cc, Http.h,
	  Fish.cc, Fish.h: get rid of takeover_time; use last_priority and
	  idle_start (idea of Glenn Maynard).
	* ftpclass.cc: call PopResp before actual checking, so that Disconnect
	  can see empty RespQueue.
	* QueueFeeder.cc: don't print dots where there is only 5 jobs queued.
	* HttpDir.cc: more strict checking for squid ftp listings; handle TR
	  similarly to /TR.

2001-12-20  Glenn Maynard <g_ld@zewt.org>

	* FileAccess.cc, FileAccess.h: add last_priority member.
	* ftpclass.cc, ftpclass.h: tune log levels.

2001-12-19  Alexander V. Lukyanov <lav@yars.free.net>

	* QueueFeeder.cc: pass correct job count to plural().

2001-12-19  Glenn Maynard <g_ld@zewt.org>

	* GetFileInfo.cc, GetFileInfo.h: Use GetArrayInfo as a last-ditch effort
	  to get information.  Add most (hopefully all) branches of the basic
	  logic.  (It doesn't list cases where cache is wrong--that can happen
	  just about anywhere.)
	* CmdExec.cc, CmdExec.h: unquote, static buffer.
	* commands.cc, QueueFeeder.cc, QueueFeeder.h: give queue feedback.

2001-12-18  Glenn Maynard <g_ld@zewt.org>

	* module.cc: change XXX to TODO.
	* buffer.cc buffer.h: add GetPos() and vFormat.
	* FileCopy.cc: FileCopyPeer can_seek and can_seek0 default to off;
	  enable it in the derived classes.
	* FileCopy.h: Allow re-disabling AllowWrite and finding out if a
	  FileCopy is line-buffered.

2001-12-18  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h, Filter.cc, Filter.h: an attempt to
	  show correct status on disk full condition.

2001-12-17  Alexander V. Lukyanov <lav@yars.free.net>

	* GetFileInfo.cc: move SetCwd(origdir) to dtor; improve comment.
	* MirrorJob.cc: try to enable write access to file being appended.

2001-12-17  Glenn Maynard <g_ld@zewt.org>
